# ChainKeeper

./: .gitignore  GitHub - scorelab_ChainKeeper  Web platform to analyze crypto blockChain.htm  README.md
.github/: ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
analysis-library/: CMakeLists.txt  Readme.md  python_module.cpp
analysis-library/classes/: Globals_py.h
analysis-library/classes/addresses/: Address_py.h
analysis-library/classes/blockchain/: Block_py.cpp  Block_py.h  Blockchain_py.cpp  Blockchain_py.h  Input_py.cpp  Input_py.h  Output_py.cpp  Output_py.h  Tx_py.cpp  Tx_py.h
analysis-library/cmake/Modules/: BuildBoost.cmake
analysis-library/gdoc/: Readme.md
analysis-library/memory-mapper/: mmap.hpp  mmap.ipp  page.h  shared_mmap.h  string_util.h
analysis-library/rocks_db/: connection.h
analysis-library/sqlite_db/: Block_db.h  Tx_db.h  sqlitecon.hpp
chainkeeper_api/: README.md  app_runner.py  nohup.out  requirements.txt
chainkeeper_api/services/: blockchain.py  tx.py
chainkeeper_app/: .firebaserc  database.rules.json  package-lock.json  package.json
chainkeeper_app/.firebase/: hosting.YnVpbGQ.cache
chainkeeper_app/public/: index.html
chainkeeper_app/public/css/: main.css
chainkeeper_app/src/: index.js
chainkeeper_app/src/components/: ApiPage.js  App.css  App.js  BlockPage.js  Home.js  Landing.js  LoginwithGoogle.js  Navigation.js  PasswordChange.js  PasswordForget.js  Setup.js  SignIn.js  SignOut.js  SignUp.js  TxPage.js  withAuthentication.js  withAuthorization.js
chainkeeper_app/src/constants/: routes.js
chainkeeper_app/src/firebase/: auth.js  db.js  firebase.js  index.js
chainkeeper_app/src/public/css/: landing-page.min.css  main.css
chainkeeper_app/src/public/js/: main.js
parser/: CMakeLists.txt  utxo.hpp  utxo_address_state.hpp
parser/db_connections/: rocks_db.h
parser/src/: ChainCore.h  CmdLineOptions.cpp  CmdLineOptions.h  chain_headers.h  main.cpp  parser.h  tools.h
rest-api/: app_runner.py
rest-api/services/: blockchain.py  tx.py
